[gd_scene load_steps=27 format=3 uid="uid://cf354hjqtf1w0"]

[ext_resource type="Script" path="res://Playspace/Playspace.gd" id="1_sx2pt"]
[ext_resource type="Texture2D" uid="uid://rctgnsfq0pj5" path="res://Assets/Icons/DrawPile_black.png" id="2_1tsry"]
[ext_resource type="Script" path="res://Cards/CardFunctions.gd" id="2_tmeg0"]
[ext_resource type="TileSet" uid="uid://f0iv6063urk" path="res://Assets/Tiles/tileset.tres" id="3_hu8s7"]
[ext_resource type="Texture2D" uid="uid://d3anf6ui5dklw" path="res://Assets/Icons/DrawPile_white.png" id="3_qwl87"]
[ext_resource type="Script" path="res://Playspace/DrawPile.gd" id="4_q8v2y"]
[ext_resource type="Script" path="res://Playspace/FixedElements.gd" id="6_tohbi"]
[ext_resource type="Script" path="res://Playspace/DiscardPile.gd" id="8_1nc4h"]
[ext_resource type="Script" path="res://Playspace/Terrain.gd" id="8_krthj"]
[ext_resource type="Texture2D" uid="uid://tfk6705h2sle" path="res://Assets/Icons/DiscardPile_black.png" id="8_m8g5r"]
[ext_resource type="Texture2D" uid="uid://c5tfhn3wdxfnw" path="res://Assets/Icons/DiscardPile_white.png" id="9_35wxk"]
[ext_resource type="Texture2D" uid="uid://btljyw1kj563m" path="res://Assets/Particles/spotlight_1_256.png" id="9_agjnd"]
[ext_resource type="Texture2D" uid="uid://bdflvy3n3a0yy" path="res://Assets/Icons/EndTurnCircle_blue.png" id="11_roanm"]
[ext_resource type="Texture2D" uid="uid://dpnwgr1lfoj42" path="res://Assets/Icons/EndTurnCircle_white.png" id="12_esqij"]
[ext_resource type="Texture2D" uid="uid://dj4iwdkmj7hvc" path="res://Assets/Icons/EndTurnCircle_red.png" id="13_12f88"]
[ext_resource type="Script" path="res://Playspace/EndTurnButton.gd" id="14_3mfda"]
[ext_resource type="Texture2D" uid="uid://bh54wr3rpcfi8" path="res://Assets/WhitePx.png" id="15_n5iw7"]
[ext_resource type="Script" path="res://Playspace/RailLeftToPlace.gd" id="20_hbuuu"]
[ext_resource type="Script" path="res://Playspace/EnergyDisplay.gd" id="22_rrjhi"]
[ext_resource type="Script" path="res://Playspace/MiddleBarContainer.gd" id="22_whwbt"]
[ext_resource type="Script" path="res://Playspace/TrainSpeedContainer.gd" id="23_hpgys"]
[ext_resource type="Script" path="res://Playspace/Text.gd" id="23_wu33i"]
[ext_resource type="Script" path="res://Playspace/OverlayManager.gd" id="26_mtkk4"]

[sub_resource type="Curve" id="Curve_6sqm0"]
_data = [Vector2(0.00662251, 0), 0.0, 0.0, 0, 0, Vector2(0.5, 0.654607), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_m0xxu"]
curve = SubResource("Curve_6sqm0")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ev6ji"]
particle_flag_disable_z = true
direction = Vector3(0, 1, 0)
radial_velocity_max = 30.0
gravity = Vector3(0, -15, 0)
linear_accel_max = 6.74
scale_max = 2.0
alpha_curve = SubResource("CurveTexture_m0xxu")

[node name="Playspace" type="Node2D"]
script = ExtResource("1_sx2pt")

[node name="CardFunctions" type="Node" parent="."]
script = ExtResource("2_tmeg0")

[node name="Terrain" type="TileMap" parent="."]
z_index = -1
scale = Vector2(10, 10)
tile_set = ExtResource("3_hu8s7")
format = 2
layer_0/name = "base"
layer_1/name = "highlight"
layer_1/z_index = 1
layer_1/tile_data = PackedInt32Array()
script = ExtResource("8_krthj")

[node name="FixedElements" type="CanvasLayer" parent="."]
script = ExtResource("6_tohbi")

[node name="DrawPileParticles" type="GPUParticles2D" parent="FixedElements"]
process_material = SubResource("ParticleProcessMaterial_ev6ji")
texture = ExtResource("9_agjnd")
lifetime = 4.0
preprocess = 2.0
randomness = 0.49
local_coords = true
trail_lifetime = 0.1

[node name="DrawPile" type="TextureButton" parent="FixedElements"]
offset_right = 512.0
offset_bottom = 512.0
focus_mode = 0
texture_normal = ExtResource("2_1tsry")
texture_pressed = ExtResource("3_qwl87")
texture_hover = ExtResource("2_1tsry")
texture_disabled = ExtResource("2_1tsry")
script = ExtResource("4_q8v2y")

[node name="Cards" type="Control" parent="FixedElements"]
layout_mode = 3
anchors_preset = 0

[node name="DiscardPileParticles" type="GPUParticles2D" parent="FixedElements"]
process_material = SubResource("ParticleProcessMaterial_ev6ji")
texture = ExtResource("9_agjnd")
lifetime = 4.0
preprocess = 2.0
randomness = 0.49
local_coords = true
trail_lifetime = 0.1

[node name="DiscardPile" type="TextureButton" parent="FixedElements"]
offset_right = 512.0
offset_bottom = 512.0
focus_mode = 0
texture_normal = ExtResource("8_m8g5r")
texture_pressed = ExtResource("9_35wxk")
texture_hover = ExtResource("8_m8g5r")
texture_disabled = ExtResource("8_m8g5r")
script = ExtResource("8_1nc4h")

[node name="DrawPileCardCount" type="Label" parent="FixedElements"]
offset_right = 40.0
offset_bottom = 137.0
theme_override_font_sizes/font_size = 100

[node name="DiscardPileCardCount" type="Label" parent="FixedElements"]
offset_right = 40.0
offset_bottom = 137.0
theme_override_font_sizes/font_size = 100

[node name="EndTurnButton" type="TextureButton" parent="FixedElements"]
offset_right = 300.0
offset_bottom = 300.0
focus_mode = 0
texture_normal = ExtResource("11_roanm")
texture_pressed = ExtResource("12_esqij")
texture_hover = ExtResource("13_12f88")
script = ExtResource("14_3mfda")

[node name="Label" type="Label" parent="FixedElements/EndTurnButton"]
layout_mode = 0
offset_left = 65.0
offset_top = 45.0
offset_right = 235.0
offset_bottom = 254.0
theme_override_font_sizes/font_size = 75
text = "End
Turn"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BuffsAndDebuffs" type="HBoxContainer" parent="FixedElements"]
offset_top = 150.0
offset_bottom = 150.0

[node name="RailLeftToBuild" type="Label" parent="FixedElements"]
visible = false
z_index = 11
offset_right = 400.0
offset_bottom = 200.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 100
script = ExtResource("20_hbuuu")

[node name="MiddleBarContainer" type="Control" parent="FixedElements"]
visible = false
z_index = 13
layout_mode = 3
anchors_preset = 0
offset_right = 1200.0
offset_bottom = 200.0
script = ExtResource("22_whwbt")

[node name="MiddleBar" type="Sprite2D" parent="FixedElements/MiddleBarContainer"]
modulate = Color(0.231373, 0.231373, 0.231373, 0.819608)
texture = ExtResource("15_n5iw7")
centered = false

[node name="Text" type="Label" parent="FixedElements/MiddleBarContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -45.0
offset_right = -19.0
offset_bottom = 45.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 65
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("23_wu33i")

[node name="EnergyDisplayHolder" type="Sprite2D" parent="FixedElements"]
texture = ExtResource("12_esqij")
centered = false
script = ExtResource("22_rrjhi")

[node name="EnergyDisplay" type="Sprite2D" parent="FixedElements/EnergyDisplayHolder"]
modulate = Color(0.886275, 0, 0.886275, 1)
texture = ExtResource("12_esqij")
centered = false

[node name="Label" type="Label" parent="FixedElements/EnergyDisplayHolder"]
offset_left = 65.0
offset_top = 45.0
offset_right = 235.0
offset_bottom = 254.0
theme_override_font_sizes/font_size = 100
text = "3/3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TrainSpeedContainer" type="Control" parent="FixedElements"]
layout_mode = 3
anchors_preset = 0
offset_left = 3615.0
offset_top = 270.0
offset_right = 3811.0
offset_bottom = 485.0
script = ExtResource("23_hpgys")

[node name="MiddleBar" type="Sprite2D" parent="FixedElements/TrainSpeedContainer"]
modulate = Color(0, 0, 0, 1)
texture = ExtResource("15_n5iw7")
centered = false

[node name="SpeedLabel" type="Label" parent="FixedElements/TrainSpeedContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -158.0
offset_top = -100.0
offset_right = -121.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 100
text = "12"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TrainSpeedLabel" type="Label" parent="FixedElements/TrainSpeedContainer"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 50
text = "Speed"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SelectingBackground" type="Sprite2D" parent="FixedElements"]
modulate = Color(0, 0, 0, 0.792157)
scale = Vector2(3840, 2160)
texture = ExtResource("15_n5iw7")
centered = false
script = ExtResource("26_mtkk4")

[node name="DarkenedBackground" type="Sprite2D" parent="FixedElements"]
modulate = Color(0, 0, 0, 0.792157)
z_index = 12
scale = Vector2(3840, 2160)
texture = ExtResource("15_n5iw7")
centered = false
script = ExtResource("26_mtkk4")
